--- a/FYP_OnlineStore/src/cssFiles/index.css
+++ b/FYP_OnlineStore/src/cssFiles/index.css
@@ -1,16 +1,82 @@
-.backdrop{
-    background: #4bcbe2e1;
-    position: absolute;
-    top:0;
-    left: 0;
-    height: 50%;
-    width: 100%;
+.main-content {
+  border: 2px solid white;
+    /* Positioning relative to the body */
+   height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
+   
+    overflow-x: hidden;
+    /* Enable vertical scrolling */
+    background-color: #292929; /* Example background color for content */
+    /* Add padding, margin, or other styling as needed */
+  }
 
-.modal{
-    width: 300px;
-    height: 500px;
-}
+  .main-content-parent
+  {
+    border: 2px solid white;
+    height: 50%;
+   display: grid;
+   grid-template-columns: 1fr 5fr;
+   flex-grow: 10;
+  }
+
+  .StoreItemDiv{
+
+    border: 2px solid white;
+   position: relative;
+    align-self: center;
+   flex: 0 0 40%;
+    min-width: 0;
+  }
+
+  .StoreItemDiv img{   
+   
+    width: 100%;
+    object-fit: fill; /* This will make sure the image is scaled down to fit while maintaining its aspect ratio */
+  }
+
+  .StoreItemDiv .price
+  {
+    background-color:rgba(50,50,50,0.2);
+    
+    border: 2px solid white;
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    right: 0%;
+    height: 20%;
+   
+    display: flex; /* Added this line */
+    align-items: center; /* Centers children vertically */
+    justify-content: center; /* Centers children horizontally */
+    transform: translate(0, -50%);
+  }
+
+ 
+  .StoreItemDiv .price:hover
+  {
+    background-color:rgba(50,50,50,0.8);
+    border: 4px solid gray;
+    height: 40%;
+    transition: height 0.3s ease;
+  }
+
+  .simpleBoarder
+  {
+    border: 3px solid white;
+    height: 100%;
+   
+  }
+
+  .StoreSection{
+    display: flex;
+    flex-wrap: wrap;
+   column-gap: 5%; /* This adds space between your grid items */
+    position: relative;
+    flex-grow: 1;
+    justify-content: center;
+  }
+
+  .SideBar{
+   
+    justify-content: left;
+  }
