--- a/FYP_OnlineStore/src/index.css
+++ b/FYP_OnlineStore/src/index.css
@@ -4,14 +4,23 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(232, 80, 80, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+ 
+} 
+
+.StoreSection{
+  display: grid; /* This makes .parent-div a grid container */
+  grid-template-columns: 2fr 1fr;
 }
+
+
 
 a {
   font-weight: 500;
