--- a/FYP_OnlineStore/src/Compoents/NavBar/style.css
+++ b/FYP_OnlineStore/src/Compoents/NavBar/style.css
@@ -1,6 +1,7 @@
 .nav {
+  
     flex-grow: 0.1;
-    background-color: rgb(16, 90, 38);
+    background-color:rgb(18, 101, 31);
     display: flex;
     justify-content: space-between;
 
@@ -16,10 +17,14 @@
   }
 .Title-font
 {
+    color: var(--nightmode);
     font-size: 2rem;
 }
 .nav ul
 {
+    background-color: rgb(180, 205, 227);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
     display: flex;
     list-style: none;
     align-items: center;
@@ -28,10 +33,17 @@
 .nav li{
     display: inline; 
     padding-right: 10px;
-    
+    transition: font-size 0.3s ease;
     
 }
 
 .nav li:hover{
-    background-color: rgb(36, 81, 120);
+    background-color: rgba(var(--nightmode), 0.8);
+    font-size: 30px;
+}
+
+.nav .userIcon{
+    background-color: rgb(62, 67, 72);
+   padding: 10px;
+    border-radius: 50%;
 }
