--- a/FYP_OnlineStore/src/cssFiles/index.css
+++ b/FYP_OnlineStore/src/cssFiles/index.css
@@ -1,9 +1,13 @@
 .main-content {
+  grid-area: Content;
+
+  position: absolute;
+  
   border: 2px solid white;
-    /* Positioning relative to the body */
+  
    height: 100%;
-    display: flex;
-   
+ 
+    display: flex;   
     overflow-x: hidden;
     /* Enable vertical scrolling */
     background-color: #292929; /* Example background color for content */
@@ -12,11 +16,14 @@
 
   .main-content-parent
   {
+     position: relative;
     border: 2px solid white;
-    height: 50%;
+   
    display: grid;
-   grid-template-columns: 1fr 5fr;
-   flex-grow: 10;
+   grid-template-columns: 5fr 1fr;
+    grid-template-areas: "Content SideWindow";
+
+   flex-grow: 1;
   }
 
   .StoreItemDiv{
@@ -77,6 +84,6 @@
   }
 
   .SideBar{
-   
+    grid-area: SideWindow;
     justify-content: left;
   }
