--- a/FYP_OnlineStore/src/Compoents/Footer/style.css
+++ b/FYP_OnlineStore/src/Compoents/Footer/style.css
@@ -1,9 +1,8 @@
 .Footer {
     background-color: rgb(16, 90, 38);
   position: relative;
-  bottom: 0px;
-  left: 0px;
-  right: 0;
+
   display: flex;
+  flex-grow: 1;
   /* Additional styling such as alignment, padding, etc. */
 }
