--- a/FYP_OnlineStore/src/Compoents/NavBar/style.css
+++ b/FYP_OnlineStore/src/Compoents/NavBar/style.css
@@ -1,6 +1,6 @@
 .nav {
   
-    flex-grow: 0.1;
+    height: 10%;
     background-color:rgb(18, 101, 31);
     display: flex;
     justify-content: space-between;
@@ -8,12 +8,8 @@
     padding: 1rem; /* You had it as 1px, but typically padding is more than 1px */
     
     position: relative; /* Use 'fixed' if you want the nav to stay at the top when scrolling */
-    top: 0px; /* Add 'px' to denote pixels */
-    left: 0;
-    right: 0;
-    height: 30px; /* Set your desired height */
+  
     
-    /* Additional styles if needed */
   }
 .Title-font
 {
@@ -32,7 +28,7 @@
 
 .nav li{
     display: inline; 
-    padding-right: 10px;
+   
     transition: font-size 0.3s ease;
     
 }
