--- a/FYP_OnlineStore/src/cssFiles/index.css
+++ b/FYP_OnlineStore/src/cssFiles/index.css
@@ -1,12 +1,11 @@
 .main-content {
   grid-area: Content;
 
-  position: absolute;
+  box-sizing: border-box;
+  border: 1px solid white;
   
-  border: 2px solid white;
-  
-   height: 100%;
- 
+   
+    height: 100%  ;
     display: flex;   
     overflow-x: hidden;
     /* Enable vertical scrolling */
@@ -17,13 +16,15 @@
   .main-content-parent
   {
      position: relative;
-    border: 2px solid white;
+     
+    border:2px solid white;
    
    display: grid;
    grid-template-columns: 5fr 1fr;
     grid-template-areas: "Content SideWindow";
-
-   flex-grow: 1;
+  
+    height: 80%;
+    
   }
 
   .StoreItemDiv{
@@ -31,7 +32,7 @@
     border: 2px solid white;
    position: relative;
     align-self: center;
-   flex: 0 0 40%;
+   
     min-width: 0;
   }
 
@@ -59,7 +60,7 @@
   }
 
  
-  .StoreItemDiv .price:hover
+  .StoreItemDiv:hover .price
   {
     background-color:rgba(50,50,50,0.8);
     border: 4px solid gray;
@@ -84,6 +85,9 @@
   }
 
   .SideBar{
+    overflow-x: hidden;
     grid-area: SideWindow;
     justify-content: left;
+
+    
   }
